# ChangeLog for www-client/seamonkey-bin
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey-bin/ChangeLog,v 1.167 2013/02/24 11:32:47 ago Exp $

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> seamonkey-bin-2.16.ebuild:
  Stable for x86, wrt bug #458390

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> seamonkey-bin-2.16.ebuild:
  Stable for amd64, wrt bug #458390

*seamonkey-bin-2.16 (20 Feb 2013)

  20 Feb 2013; Jeff Horelick <jdhore@gentoo.org> +seamonkey-bin-2.16.ebuild:
  Version bump

*seamonkey-bin-2.15.2 (07 Feb 2013)

  07 Feb 2013; Jeff Horelick <jdhore@gentoo.org> +seamonkey-bin-2.15.2.ebuild:
  Version bump

*seamonkey-bin-2.15.1 (02 Feb 2013)

  02 Feb 2013; Jeff Horelick <jdhore@gentoo.org> +seamonkey-bin-2.15.1.ebuild,
  -seamonkey-bin-2.13.2.ebuild:
  Version bump

  20 Jan 2013; Agostino Sarubbo <ago@gentoo.org> seamonkey-bin-2.15.ebuild:
  Stable for x86, wrt bug #450940

  20 Jan 2013; Agostino Sarubbo <ago@gentoo.org> seamonkey-bin-2.15.ebuild:
  Stable for amd64, wrt bug #450940

*seamonkey-bin-2.15 (09 Jan 2013)

  09 Jan 2013; Jeff Horelick <jdhore@gentoo.org> +seamonkey-bin-2.15.ebuild,
  -seamonkey-bin-2.13.1.ebuild:
  Version bump

*seamonkey-bin-2.14.1 (15 Dec 2012)

  15 Dec 2012; Jeff Horelick <jdhore@gentoo.org> +seamonkey-bin-2.14.1.ebuild,
  -seamonkey-bin-2.11.ebuild, -seamonkey-bin-2.12.1.ebuild:
  Version bump and remove old

  03 Dec 2012; Andreas Schuerch <nativemad@gentoo.org>
  seamonkey-bin-2.14.ebuild:
  x86 stable, see bug 444318

  27 Nov 2012; Agostino Sarubbo <ago@gentoo.org> seamonkey-bin-2.14.ebuild:
  Stable for amd64, wrt bug #444318

*seamonkey-bin-2.14 (22 Nov 2012)

  22 Nov 2012; Jeff Horelick <jdhore@gentoo.org> +seamonkey-bin-2.14.ebuild:
  Version bump

  03 Nov 2012; <ago@gentoo.org> seamonkey-bin-2.13.2.ebuild:
  Stable for amd64, wrt bug #439960

  31 Oct 2012; Ian Stakenvicius <axs@gentoo.org> seamonkey-bin-2.13.2.ebuild: