@@ -154,40 +154,62 @@ DIST seamonkey-2.16-tr.xpi 834967 SHA256 fc600b1adde387315e060c31a7a6c5394f6804a
 DIST seamonkey-2.16-uk.xpi 835210 SHA256 8c7d5af2ea2c2b751ca12e175cc78bec7ac84eeb378c3c9c54c62d9659a7d440 SHA512 0b82153d86e896b249412a679c7385747fd7cfdddb8a2fa80ceb4cb0a3a9ca703acc1efe7cfe9f4ccabb370bf1f91c91751253ed7750e1bfdf76d6d0fa5de124 WHIRLPOOL b22063360c3dd3ee0c76e8751c7f0cbfaa11bf2cfe9be97d1fa87dbcbae18f2e7d314f24b1cea2902ee60d48562c839f6c9a721f2b8ff20593312743b8eb31c2
 DIST seamonkey-2.16-zh-CN.xpi 803623 SHA256 beb813a20bf95dc9a10f4e912c2d40645cfe9227d866d8fead214a5a25b40a91 SHA512 76014a63aa6169ba8da5912371bbe9f83d205eded05d30646655292eaed88f918bf66a71e7cb6660ec836824a119367852d24512d6825fee339889abeba694d2 WHIRLPOOL ce4890e4482d3dcdd7cdad038946b84712e1416767b64577846efb93de2e6b766686b3e585797f87aa6be1241430b61ad35365b35bb50a3f1cf6ddd13461cc7f
 DIST seamonkey-2.16-zh-TW.xpi 805966 SHA256 07da14ea1a587cfdb9125ee7bf588cab0ea356fae4861953930775c0a3880b87 SHA512 42f42435b875e4b20d69aa357c3e1cba60eeee594a0f0585f1c72327c1fc8bb7ea277d76c8547154629e26eb7f196a5ebd7aab604c8f6e7ad7633881f678dd4d WHIRLPOOL 72bfba6cdfcd195515448ff0b465094535f26a4b8f260f4d0b37ea1f80e7774fc8fbc4f31e82ed12f7dcbb79d1b227d3fd88f3c96fb6a5fe049c0875f0b59aba
+DIST seamonkey-2.16.1-be.xpi 785883 SHA256 911945fb6d6cb4de82748d3b200a27c649c065ab743723e2f507a4896406ea03 SHA512 9c7c87c235b6b74790262e31e64bf1bd034c57d7d7e6fd4ca33b4428d81c9d18f38bdb4b85ce208a0d9a133a227e68eb22519a2b326e058428161b76ed2e17a3 WHIRLPOOL 9b433b819dd177d86e719913b657b7856f8215d19e55ebcefa578817077e375092aebef8f87bb21215a903a49c0bf04252c90f4f3251c88c2b680558d96e4db6
+DIST seamonkey-2.16.1-ca.xpi 777174 SHA256 f2d4803d8a3ca8a34547ee9f1b0771ed01e72b8fe460b9778af42c14d2fa988f SHA512 12c116737a63f521e22d964fa0137d8ffbce3d2e985fcc3fd1f9aece05bd9696d55c75c2d4d3a61cfd10bb175a08fea9773807a64bad1716ec372443529e236f WHIRLPOOL 7f7e818ee8bc1871cf68862e448e3caa408a35504f4e56bb7f40bdcaef47405deb81eb5cfb13819d2d4b20dddd64acc5cc7e50db5e93973518a028a67a198785
+DIST seamonkey-2.16.1-cs.xpi 782286 SHA256 f76f5146ddeff47cc434217d638cb0af61a669ce425ed02d38a1ec0eee3aa2df SHA512 e04ab41a909344684680b965fbdd44ff766d3350fc30cd44d3534d23533a548671b43ec41272064e7a8fee7b465bdac7ff8890bc0ad8ffbf9895fde03a05ff73 WHIRLPOOL 3e71f343aa2f019cf1fce90a71d711d298b04c7061cc84f3afa25b048db545128925a8524e284c4b5b04ca4907881722abced23e39626eaf697b754feea16af1
+DIST seamonkey-2.16.1-de.xpi 805628 SHA256 ad31d64cac7013d3070999df8a9b19ede1bc6d18386033bca7825a46b3b12be4 SHA512 da16f0e4d76466767cc4a8abfd625a5b649092a58e382641c5032b5987b8f5143a8bf46f59159a93ff90133258f56e8f5a165c44f8e1fd30115c76cf92128a79 WHIRLPOOL 8f6f35d370353456392b75bff74f47c504e2328cf5ba464e825109ad841215a397312b72eb65adb2bfdf8aa9d205cca684886b218cd36c02111e7f8ff8b9368b
+DIST seamonkey-2.16.1-en-GB.xpi 751440 SHA256 2fc0736572e442529a9679c65bf5a7f1bd4a814716d06865034f6579a641995d SHA512 9e8046796cd93a436405a6f614cd547f5f86be756bfbac354d20f4e20ec470c1194727cf12c3ae4b0c85aec359699910a2113a5951396936fc8b18a1b17eecb9 WHIRLPOOL b307f046988e74baf6419fc97d36b375675fc9edb4592e66a7232f8a683ed7e3647f6396ca62def9bfa344dfc5dce3790143149e7249ec7aae6efa8e464e5254
+DIST seamonkey-2.16.1-es-AR.xpi 824300 SHA256 e677778d4d54cad54c10d9b070d5ba21b3864bf1a7884241b207373bf0b9061b SHA512 d9ca2699e6642a15c09676497a09bf1b99189fd6fa2ae1a84fc101f98785c618246771529f5fc6bd7aa5ca9098eb9a1f97ad2d22d4489bfeb18886f14cd17f72 WHIRLPOOL b2be21e8026ca9051686ed86d77ed7cc579aacf51e034ffbbdaa47abedf9b1936790006696bcbf61692df4dbbfb5fa57f953d6674541c36e23e9a09e970600a6
+DIST seamonkey-2.16.1-es-ES.xpi 772621 SHA256 55dbb09ecd067bc5cbffd96887a2ba3cbab2e0fb791bcf1941efdda9b9101705 SHA512 9fade4eb695c3339b4d904f7343df225de35e1a985ac6b86a655b4621efceb0c6f050a40c59aab62fda49ba506afcf3bc9fae4aa25c4eb63f397392d4436c2ef WHIRLPOOL 3aa1cf7506ba6126b7159f7ba8951bb7a41c941e8a27b76077975fca723312aed6deab8618f0c3f4404c8931ce600cedb25c423677d6770df14d3d9ba8fb55d7
+DIST seamonkey-2.16.1-fi.xpi 771991 SHA256 4b996a66da3cd4e90f8549bcffe09b775bc9644e86f91555553b4cac7bf234f7 SHA512 303d528ddda302df67f9bd84f2034040dd317157d2a0c79d3f15e3e9e411ab846dd74f86dde665d2ea6abc1d77d7176e1ede6d682bb74cabc5b53bc1fc45f843 WHIRLPOOL c2a76fffaa3788553c47c6347d2b51df20852df69a4a25c7a37cb5e648889a1185b6b896fe4f501204445061c24cb490a41cb46a2fbecb97b9108a1b943d722d
+DIST seamonkey-2.16.1-fr.xpi 781405 SHA256 b3056af35b245fde9ef07cb7a67a6920390f8178a9630736d61c144234884315 SHA512 1eda4aa9ebf0f8306d8511a5a9ac6873665bd1e1db78e13f923ce065d0dd4cc64e9d3c7aa71f8c3551b9d2416c10f0099eb7bd76ea5ee3d8d61dfbbefca7a6a9 WHIRLPOOL a3575644441dc73562ac1493712b68fc522c6cacdbe72ffdbb2acec1787ad663683e0774ee700aa12ee5dc8f91961178ddaf0ec66e045e05053f6429f5c60cd7
+DIST seamonkey-2.16.1-gl.xpi 770750 SHA256 d1d184ac0c7e4be82e239d8b4cbec3cb25d053a123c6315685f8b18af5b436e3 SHA512 d2a19562f4aeb1922466f210262efc5aabf0d90fe466990b1b6bb2813f09d52f4526dd4041c6ee5d0058cd1ee74078dcf53dcde712a3f7f59ee4ea3235872cce WHIRLPOOL fa26e5258eda65390fbf949a1462009d1a6f4e7590fcd279dee337afd6575ea2cb70f63aedb6800b4b8222e8647f0f8b641cbf440c5d3d0383163f2c6e1a04d7
+DIST seamonkey-2.16.1-hu.xpi 816448 SHA256 e9acfc35fb7a26f7da896d3d00eeee06058fd905cb85207d6d7b2ca51d435a4a SHA512 428f4fa4416c7d81392c96dbcfc61d643b992ea8fd52ad7147ffb2bd1b98e63771b90352d1f2ba463d7800c3ab2053ed4efb00d97574670c6faf4e625e6e2cc3 WHIRLPOOL 7da2f1ad08c3790a613e0c33e60e5b46456ff7e032b3bef6dadf38aeab60fde5b970a60a567aaabb96f20c8d1095146daede200c2c958f58617b3bf8aeb3a6e6
+DIST seamonkey-2.16.1-it.xpi 721930 SHA256 d380309c6fcd5cf84671689d8c93c5003c610b872a2b5882d8ab384154073b04 SHA512 061ed988d197a10a7d68fe5ed96f90da140045fff0edfdc75fce4e4ab5da49ee4ea9e5e65832a8dfecca2330e897580bf639a9d50c0a443f02a4874e7b84d0b7 WHIRLPOOL 87b33cf3095cfc465a5d1931dbfe1c25e9f89d7deab88ca273737e4f3918e0e25f8eb9ac26b7a87eb91b6436028f7b9d2b69d1895ef591e01656af46508840ea
+DIST seamonkey-2.16.1-ja.xpi 829871 SHA256 8221cee1d138a028ac4c7042b7b1340404cb6aefee84592c7feebb71bce00ede SHA512 7372d448b98139a59db1d7a31459080fd9e4a2229651dca98faaf6072ac0a03aa54f8c5cf50dc7a570a99a59401dbd0ff70d01e788996163ec4063d97554524a WHIRLPOOL 0b22fc07fa9906e0411656bc9161e5d99a2a49818d15a7dcc113069e3d5ad653a1b7a1a1b47f105ed5155616c6f44b6d5fb74facba7d319e7789b0ddd619da0c
+DIST seamonkey-2.16.1-lt.xpi 795322 SHA256 59e3a5b9a107f148dff8bd1cd5111f57d1b6b2bc93704fe3b3f2b69db946a804 SHA512 e0bf9c3b152197d9b10ca2ab2173b0f0d2d34af14af83fc1f29adcc86b3c9e07ef9b19c582b0e527b84659a91ced4dddbde094d6fe17180d049611766fff4581 WHIRLPOOL 9ad56c4d66fbe5f5e15a128eba4204b99c07ac22010067709f8ff314909ad0f308011d411236c89326c672264d436b1d1e5d7234033a2786afe4e35e9e7c4b32
+DIST seamonkey-2.16.1-nb-NO.xpi 769320 SHA256 475b4f1eef56614a417b48a1aafc09541b08559db52b4b27f33d5fa11ff38544 SHA512 669c3ad7dbf1534cc9a0eff057c26c27c8636d73a0bc7162c03239743a1b1ebb3ebd0a264e9d64f8b43ee310273b5badd48caca51d032d8e7f55edf91bbca305 WHIRLPOOL b9abc66dcd507ab4afe623c9d60ade9e5cfd41fd86abe1d2e3c03580f501b22ef7d1004adfa6f752f5a12abbb31b9a64f6896280867901edfa5cb1d005dd0a0b
+DIST seamonkey-2.16.1-nl.xpi 767744 SHA256 2b75210b5e4ac966644d8b9499f8b69c25b67e717b49c59708081d56b348b682 SHA512 ebb47a2217a7780d049e78fc268bf5b1830132076e2799ef1de61ca71e83f0a6535e8bd1295673ea641b00d0787f58ffe90930b4d365bbf035b1181d55cc2c0c WHIRLPOOL cf485f5e1dc88cb82dbb9987769fceb114044fae83a5ef541c61553405177cac7dcdc613f02344c6e17ca63c05bfa2b6dea9c845bdaf5f35ac174b741df41e55
+DIST seamonkey-2.16.1-pl.xpi 813142 SHA256 b1c80a450a5e6f16dde5108931f04ab2ee771306cd3a9e0a551c0736c5dc1368 SHA512 eccbbb512f92882565c2b21847a41ef065197b8135c8f2dafa0d461b7dc8e205e1e6d0f707ebd9025592e98f13c126c964b2338a5627289e9b5acc3a44ee5ddf WHIRLPOOL 44da1eb3c11ca3bca893a301981c05104360db7aa2ae99152ba10a54b88ea796923efe3d785564b55d23463dff082499cf5cf2ac531ad12133ac5c7239aeba83
+DIST seamonkey-2.16.1-pt-PT.xpi 803420 SHA256 628e66cbc64ea9c9628272bf32514b439934fbbdd6475a4c6c58b24231176771 SHA512 b5bdeba9892a057e6dcd83279fa204b4bd4bae0c468a0c2b97f18805bf598bc9e03711bad7cfd33347edfe857cde9fefed0141b87da0adf3bf5a398add12819a WHIRLPOOL 34806b6f4bfddf2e5053d3610a70ac4af20d6b47a2c1f10b75fe5a6b77ad5b04382b826de6b2cb78aebec4dfe0e9ed142ab312b5b950d99a5c28d152ee452195
+DIST seamonkey-2.16.1-ru.xpi 875920 SHA256 ec35b3e5f2e0c5b869752b34de67de722f758fb64afcb0d9a24efb6d13670e9b SHA512 596b2493a79706be0528d2e30816065859572863c6cab4b5e0147601fff57aa7d134c35665ec9ffaa177df97bf49f1beeb96585411f09b0437c94e9a88b1132d WHIRLPOOL 268d4d6b809bd6b4c9b060012c720dbbaeaf0cf0047641e57c0f108f10510896f9a80de4a734eefb50b43bfe07bd247c3801c358c0bbb1127c22a2fdd253f1a3
+DIST seamonkey-2.16.1-sk.xpi 808953 SHA256 aef94562d31c3eae4cc1b1cc34b7bf74cb73bfb2d9702b65a0f8a534122ba947 SHA512 c9e49a4a43d6149d7c88ec939cc1a7c1629ba95ed9e1f6d6c4211b4993321369ec51954d97b71d32d1560e1fb087eb6b19bbbd7e6f84b5f85c04b22edcbab8a3 WHIRLPOOL aba14ec27d4d4d40d51eb7e51e3a38a597750601e3ec469493a1601aaa2cb41592630c6fe8f1cf53de5895b94e76b55ed21547a90b180aa77e64ab090bdd8a32
+DIST seamonkey-2.16.1-sv-SE.xpi 795026 SHA256 04ab6c5728e2fbc2cd3c80b1f9e00957ca0d56deb1b27b88a6f1bde6ec2e8c8b SHA512 2aa789a608e49a866b2e085eacd1336abbde38803fb8f2925cf7fe7278d5bf937aaee6cfb7717d94fa95554caebaa49642400d9ca6168e8522feeefe2cedf237 WHIRLPOOL 3ecbb21c1dc744a23c2c5bee1077ad49cb1b179828185eb368fb6987b96149731ba434e95dc9447201f46bfcb51f8f37a12d61163a03c75480c656c654e723a2
+DIST seamonkey-2.16.1-tr.xpi 821202 SHA256 fbf9f407e7cf1854d539e2e0cce69897d854c2926e77280a961e3e0233ed0c44 SHA512 81f32e006cd65291ad0dc9f497c6b38f1e2d5fbd7f2e81c366fa7de3e0e43fa182a12ce401f340d987e37f1d42c29f94b44a4cd041ccab886649cae5212d1a89 WHIRLPOOL cee415cc7007ba54432355bdf6b3a523d5d1ff977a796ac3d31d2dd39b24b90aa6f7b46d70f802597fc412c9e864735d9533bef737a414ced69e7e9a7d32b4ee
+DIST seamonkey-2.16.1-uk.xpi 833355 SHA256 c0db9838faf949f101298d3f0fce376cd32747d3abee5a15def775587f772533 SHA512 d929a9d1fa160a6f81b17a0adf57fc44b422035eb78b5e72fdae9eb0da9f42cc9f0091a3dc257fca49dcb8dcc12cfc98ac89333748f99baf9f331f1196c4f126 WHIRLPOOL fb9cfa4feb32c2b3cc6c9b83867aee95eb3bb58cec21d9b38c442ceef0ffc7cf48d17463215e9b601da67beba2e9c14d753b4bad549defebd93af3401c53885e
+DIST seamonkey-2.16.1-zh-CN.xpi 803586 SHA256 9d71ace9ade06bed7bf18c7254caaff1c54b78ac2b6ff7cd654d52ed86066280 SHA512 6597165e8b12aab505f7a151efe3d67e2a227417492a7f5177711a062f12bf251d5b5cc35c32dca211420df287c35d8ec095d17b6d83f65d96499f5b14ab969f WHIRLPOOL 4a7e306561c727700025c76b66077503d45f2067daa9e28d86c5174d8310f06c2db00ec23c7eb7f5fb31b42d719289aa1f5dd242f60929a59157845b39f36c93
+DIST seamonkey-2.16.1-zh-TW.xpi 805967 SHA256 342b6bc686e972663e624a21e276093859a9b13e9cf973b11f12cdc694a2f9b2 SHA512 50adca60917a145497fc64a600d037a0f95d12f54b462ae067f66d96bb37e00c2ace36877f904e76d1553ea47362607bf8fe782037e0adc28a85fd50d1295b09 WHIRLPOOL e6f9198c2146c2d02e01c76f831934e91733342d103ccfc4dd9fb81ddda6570d793d65ec5161a5e82e9bc53759352cbf46d8e0b3486ca1f9917ddd615273d594
 DIST seamonkey-bin_i686-2.14.1.tar.bz2 24030719 SHA256 a52326a4e197ef83a48288420db7366c9a94a1c5f8e46a6e44b61c20aa166fac SHA512 237e6fd213ca4e8e9d9f93ed84945fd59a22d85a1885701bdbc67ef530521d422a4abecee1cc4eec7ca8da608ccf879ec899d7ea4aeb03e15cb59881a22a1f50 WHIRLPOOL 81fab1848d24cc81fc93da54e26569dcbd703d970d153eace946489cfe535142433bd0791bb834dd082c3dce589dba4f44cd4bf98609fc55bbfc60416db471ad
 DIST seamonkey-bin_i686-2.14.tar.bz2 24028306 SHA256 e0552788d828b71c68ef68b6bf5b2b2f5372a0264f13b98b00717a48a855f660 SHA512 35d741cdea0ea7ca7a37a45dab587d1ba48228d28a3114352464f0ffc04ad17bfc95f107f529cb56230ed05980b46c74bcd33b1220a7900daac67f8e789372b7 WHIRLPOOL 38278508c61da6a7bff244eb8df4a9be0d90107277234eb64766e0d4f3a27a7244444b6ddb97043363bff68dffae25c70d58e590d8d292039190b942aef580dc
 DIST seamonkey-bin_i686-2.15.1.tar.bz2 25992602 SHA256 7383163bdd7917b825f9e46f8f4388f7277f69085f3eb51a4395083a0fafe505 SHA512 6700c458d2d253d172ad38ed57c017b2093136e7244bded7e2dfd86afd7376e6391467496e0f8a49fcfcd0be609e17fc8b1e3979ee28d5665e4b8da307ebd4b3 WHIRLPOOL f4f7d3da33d7d27a12b2febe5ad8ba29213c52798f5564297f20b4678c216ad0b59c9c2297607301394b5904e80dc2d0a7653953bd5b884e16be7481d92b40a3
 DIST seamonkey-bin_i686-2.15.2.tar.bz2 25996013 SHA256 c490f6ac47a2b392cefb1fb0a5f374f6c90ff46f06fcca976c580eb67bf3b37e SHA512 c2c7f43fc0a342581cb95e3433793bfd8135b1fbce077bd15a3be7512747d9062bfbce20bdad786c6539f98c320112966bc86c54828058ccbe4f0c70991f22e3 WHIRLPOOL 781749cff3680da8b20506335b60f4682ace99d40540633eade09d5d5589503e3b78ac91ea85d995a5d592e614ece5639537bbe2c57d3b50eed68ed71e4de286
 DIST seamonkey-bin_i686-2.15.tar.bz2 25993787 SHA256 3dc92d91230399f16e966c7b4c8b36d0870979394339f357ef2c9989575fd204 SHA512 5043022ad0c8b5bc5a4e3e0236fe2a3950919a8e212fa46ac2a27aff2ed0feb91ad1bd7ccf34888016b3dfaecd134a09f72f85777209aa00beed9b2ca31c22ec WHIRLPOOL 2417392e6d66c6d6bf85154c75ab524cf45c97cd7f05df9dab2303764efaa31df29185bfbf8c4407d500a9ced04992a86edc6f3ef0edc5029fe81946b2a67c5a
+DIST seamonkey-bin_i686-2.16.1.tar.bz2 26185020 SHA256 a8b90e5eb5a45b18d92136fffeab2fd8f4ed10c4a5f4a9127c2eb4d7d3b326bb SHA512 9fce18aa7b524281a15ebed4269a3dec0732a38b041aa426c1fae75b154aed336fae4059332b129630022c286e3bdc5b7cdbc5fa85ac7e73c4ada7cbe408470b WHIRLPOOL 1d71db48cecc20c4e3bfc04d6852ed90acab8808900a37dd6671cfe6d32af083d35b250b84c1cf1ff429eaad7fe95df494637cb7b4c4748f6e18e0a3474eb144
 DIST seamonkey-bin_i686-2.16.tar.bz2 26182862 SHA256 71748b27d4c27245b8497a9757331d3dba44762f6551b3eb5f26a82575cbe751 SHA512 0f6c902484926294837cb298d50d74bf33ed7a685dae2ad4f2b9b90006eb3c7af5979aaa55804a51188c768abda7d61b2c8a2590db13adf934d20351b46de026 WHIRLPOOL 339ba435e69558af83f2fcd35c34e27713a7ff090a272c9e019f9e7f653cb833e50c66f8c88a73d9e69fdd308f8f668970fd7e90481205f70dc62b53dbf4d03d
 DIST seamonkey-bin_x86_64-2.14.1.tar.bz2 28642881 SHA256 8b136b0881b0ca7e78dc15114a743e953469110468e82a33f55d443c432c7bb7 SHA512 4ab6de6f17e5a78f868c4c9a1b47b66d37e6430a5eed3c67599c1aa3c8b5ded374fb080ce7f19821c564d98271ec10d13fef557b6d0c69d7d4f15b8ef6ffcf79 WHIRLPOOL 8a42917cf1ef3a6f9910b5946eda9d806732dbe01de26b8ae357b76a89741621931fb7d802fe0befcf5cd24d81c49e75871c4b098a82ac5ce909373266a01a58
 DIST seamonkey-bin_x86_64-2.14.tar.bz2 28641149 SHA256 fb5bb367b181f1b7999379dbb80f4c5a1d68624c3b428782bce7d7dd9d9328a7 SHA512 7692909cf47c86ccbfe699701f71bb9f4bd2dbb4d9a88c85dbb49fb6b51fb37830ed9febc0cffdb36a5d2ed6368fded03fa89d2d903efe44715dcffdbfa5c7ef WHIRLPOOL 1504c7bfe14b33871292bae42f9501138707564f066da06a00d880b4522c8ed51646001e6e9a1ebd63c8cce5f1c3a05ac2caf2bec34e6491132232053d085ec9
 DIST seamonkey-bin_x86_64-2.15.1.tar.bz2 30147703 SHA256 c3705c7b54c624f2c4916e038075bc8997f31c254746821d11122aa4f5a26f30 SHA512 99b7e135b2c8ea60466e826b52bff266fd4ea5af34efb3fd459ab59bb106bd85665813aef5726a33805459b9f177aaa886ba03cb5f6190e2f5ba66bf11731fed WHIRLPOOL cebc4215a298dc5b3a63884658b623446e5c06605fc28890b2ac17f1a5499681c6c3ffc994408e9ba09c6b7d88582aa0edc71cac2759b6ef41a8912c0ffb970f
 DIST seamonkey-bin_x86_64-2.15.2.tar.bz2 30130989 SHA256 a1d8a2b908dc41beaa309fb7aa98f463da2c628aaee9f8111b6c0975a3299d74 SHA512 bce8cae12f7651a6a652e282defd2825a3852540d2f5c0cdf44e89e9276746d322763bf25cef17456d7b93fba9ccbfcbb80b45933acce59560dcaeb02523b21b WHIRLPOOL 8c856521c4e11ab68b985a2c6baf3455bea2c5f5d0ed0a004e9c372256153790392677f801bdbdc9ec2587b58b64e3dc8b6b0d5f39746edf90ffb8ebfb24446c
 DIST seamonkey-bin_x86_64-2.15.tar.bz2 30130783 SHA256 cf4b14d464c780a400cfead5bd75d190784b6ca533db8d549125c086bdbcdce6 SHA512 0ddab098cde04f1939ab6f65207ac9435401bc666cf5e667cdd227f68e890a49676a4fee9071b4ab1f48b296d8935d3b99ea60d087d440589a81b6b2e6c3ab40 WHIRLPOOL 7db30f8e800438282d57f204f9ad4332be0291ecd0b75dae74b734a60d3cb6f7dbb32ff6972f5d7d8b892cf0e7701845f52f6998f206b766277cac710aa95655
+DIST seamonkey-bin_x86_64-2.16.1.tar.bz2 30248748 SHA256 7598cc82d173a1f6460c33ef6782c2747064374ddcf0c8c8920349fd1c184617 SHA512 1a928b66fbda5f0931b21d95ec5d9d12f6ac07c397de5b5b6f137a2638965060e621ac31f194919e24a1db646c53fd51547565f584920e993848cd2631ccdec9 WHIRLPOOL 10fb2e56a769c1920b5677d96909d1085272cdaac4dc628ed84ef04562994dd36a8c7401901c5e587e4eac94f614008816b8973293c225089505f694c7ae3ab1
 DIST seamonkey-bin_x86_64-2.16.tar.bz2 30247617 SHA256 6ebecca77c3060a70a4d834522dac04d67e7157d4917a7ea7b5cf8106c11779b SHA512 5e40a2489cf9b149f3c7675cb80c17424cba8b7213876e08a9ee758d3004603e1a862c3bbb6c5d201002cf3395da3525bde2ed82466efc3ac7008b0be783d7fa WHIRLPOOL 255e31bc6b1cd2a01fcf80df5fdd2cd0abbd1fbeddfec5edfcec0f2fa2139124671563ab1524af5bdb1f3e8472dae92c2c06d70860b0332e632c4a101b2a3feb
 EBUILD seamonkey-bin-2.14.1.ebuild 2917 SHA256 376d2b025a5df8e294fcc666d605ae65f0cf5ae5434767cfa06ce0a1836f9610 SHA512 0b651d2c6399eb7a66bc91f8bb8f5afa683935ba563fdb02dbf7823e0ac4113d4261ba2327021ec4c4ca5e0d4cfe9092b7c3dc798f9e1806b1e1275e58373c23 WHIRLPOOL 87779a9880e3dd66c7eb6466db5f16ccfc28d5a4a85d81f5f53004a38d874e0f9a8a2f679578b5533145fc35d96d9ed9626a9b0d512c3532a79e59e32f742c2c
 EBUILD seamonkey-bin-2.14.ebuild 2916 SHA256 14a3dfc1e502df6bce6611b6a3a99e6f9b8750886cdfc5170469bb47e96d6156 SHA512 b963946bfabc01fc9a7ebb14c1abeb5836983892d098aa47cf677f5b214bb7e30a8ecabc2015fd1b71aeb5e9d81baf52a0c4682b95111aa415676b439f99926f WHIRLPOOL ceffdcf5d0e14042b5eab0b560c59b599b9f94d223f81b0359e9c2b2c3af98993fb82450d42000b952e49c04d3846391c2eecc9638d99f5144629fd57bd3bb50
 EBUILD seamonkey-bin-2.15.1.ebuild 2917 SHA256 c364cb1dbefbde171fe1ea9fb9297acf1ea20304e6f86cfeafd9773e69e502c7 SHA512 50cf60e55cac2e4e0e690a7a2485262cfd570d3792cbf86774a9eef9f3ace88206b8fd9aea37a11cf8b3baeddca9b8ae68cb0d6b03596ec7b8f7722f38a53bf1 WHIRLPOOL c4c88afa867f970a48b44132b89c63fbc564b546a8b6de66f1ecf51a05f989491042c086e492ef7b8647a7112f8f1e9d723db027aecd0d64f3dfbad8660a2ab2
 EBUILD seamonkey-bin-2.15.2.ebuild 2917 SHA256 9f62ab70b3b6543c14b3a509f7dc6fc2bd469a90cc3bfc5252fec80ec1c2b4fc SHA512 660bcfbc8d675933aea77a09c9c09ed84bcfc1a0320e8898ae81c4fefd6f8f687d47f2d2f23bfdbf20a1a2d2651eb13d2f4ca7ec2378c7d745df53f6a82496fd WHIRLPOOL 709c463fca8ed003a899847906dfbdd8a3b72f34172e46477d75c6bdc41759488e831c0c00f27f3b175696dc21db2fb2d1da95955597d15caa11197330377876
 EBUILD seamonkey-bin-2.15.ebuild 2910 SHA256 1367d2536346aa59a92bf27138e93b4dd87309c419af31c8d6fbd4f97e9d0acb SHA512 db432ca21b812ba9b72c993e637c2bb3a3e188ab69abdf7f951ad4beec84190be31291f9e41c47efeb23f3587d67d93814c35c75999f506e3bc6cde02424d622 WHIRLPOOL ebe8996f3ff9c3f50527b43345579aa84d338c72f9c77025cfece26a631abee092f5eb82da26f5655bac7a668c71b7e3d2536fc115e2c7da45131988767ec251
+EBUILD seamonkey-bin-2.16.1.ebuild 2917 SHA256 1b209f652d3c604befc2e6fa11c31e8de3ac4966da199ef1aa1e2cf28c9a5681 SHA512 8323a71daf84de39febb444012905a384a09660c27a1b0e71bf665b31fceaa42dbbc7995c126ece3fe3589427a005cfecee357b6a62adcf07577c2a7f473db38 WHIRLPOOL 4b78a769e5a214953b23e33bca81f9cc1cad6d609420490b0e89545f40d4d232816d489095157a3e7a128a6ad0b9a86b40805cd021e0b24228f782efc03aa489
 EBUILD seamonkey-bin-2.16.ebuild 2910 SHA256 eae52b6b3c41f14dfacb77bbc9294bb2e68c21c03af9482e6f61efe4c125f110 SHA512 2e04aefeeb8e578f9f33327e083f01fb7f7e4b97ad5fb422e5cc5589587aa4485e8b25301f6963c14cd213976cfb58c9393c5562163ba272a8f3fc5f1e95f19d WHIRLPOOL fbe0558a118bf10ed9e885e9b3116f12efc624d7a12f2338ccffe16d59ae77a178086a6b0088ff24907da4c9dd6623cbf532389b4eab3e4dd56690b77b36d65e
-MISC ChangeLog 22037 SHA256 8d7b5e9012bdb3563a621f3f5450aa6877a5f524880b1dd1f5dbb60179a1e0b7 SHA512 a61f51f7d7b684d39d8ddd1fdda298c1ba957091fd091b4997fd11cc4472af3bed070494b3ea2a1811f815e6253cf380d61997ae67c8967b1cea5606f0e1fd97 WHIRLPOOL 9b49441cc98de5a4097aa84fa4f8024c9629214539d0de9e0521c55ccd409467ca8517328377c039b9472a1fb3701fed27fdd4874e80644518fb7985aab529b2
+MISC ChangeLog 22172 SHA256 3a5943c4f2a3c762bb73fdaf6f6db41b8167a63e25cc690293ff21dd06abe090 SHA512 958cbccd79209939bb0b08b1e1596e60a4e7d7b64c9fe4b2cb0bab34013605f70e3eaf971f341064d6e5cdbdc502dab2fefc5cb41df37ca796f547b35fc1f67d WHIRLPOOL 377b9da069134d71776510bd39fa931dbf82071bca46299dafc77c26b51b3549992905d043b601ab743cafdd11633e044949673ea6267bd4eb03ffc46f35343f
 MISC metadata.xml 254 SHA256 a3226afabe2b6960ed5584ea6e265043cd8e9e04dd4bfc402c5d693a530fbf59 SHA512 99bde00c1c7eae59a5564c29cac4f26a69a86c6a50f8424095f5715b0ea303866467a7bcb5f71acdcce8fff3dcb86568a0e4627a8cdd881f5e6e3a0a629c157a WHIRLPOOL 053322ede426fcc797039f7a8c2dd907969312e2d7a852561c4deed15ced7812ca82dd4d8de8fd7852bc97d9d0e99d7f733695624e55666259b3c397f1a065b5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRKfpfAAoJELp701BxlEWfJMoQAL7ZKM/5QcBgRw6VYIvzFwdI
-UXf9qIibeYcy9NEJlVHwwpG3lbsl+Yf0iMy/ls05vQ1hiMffcUHbUfSK7g8+t8Zz
-kezgDdo2iGzXl+utv4g2tJAvW6HECS0zqDoNR11WVmhONt8OWnBrwjPoIL7QN+Sn
-IOVzx6GwurOu0nteSPBt4ZNb2TcDHhfbQlHzgqhafdeQrQNVjN6i834UEOVu2y+X
-l9ZZkdjQ9d+PrnJvWdosgZIyIdXkQBLa2A5br7BB3DqJsYqEosphA1n6OGQPlafa
-D1ccgHSpCzIriy1LgeAxtPVc+P+lZ3PohkNni8OvyOOtP6O8E/j3d+hcx0lLiuNo
-eKwVfe+6yT/1eefMr77162EFs6vg7PbdeIzoDKs/AaezSGMqoxazDHhWosqi2Anm
-uratpHzM+Lc+MlkTwX/ky9LqsZqyRSL3qH+r6YSRQYzplzC0VCYAZ1VLgTtLDa6d
-Dz7tmoLrG1nwZy8Gmsu91VEefm+Ah7xi5oXwke0IIRUZGGYJSoYpQ1D1yq1xMSm1
-+JppRThuiDqzxf2ZUJrlGuyixzg3w+pb6PgTa+CpT+REwRwR626ovsp61Hxz2Mdj
-vKbzmIlqoLF7dmjEHvjfWYa5SpfsZ8zRBCywyNpL8uSPP2EsyVcVTKmWG4GiD7mq
-vYU66DVKHeJZlJhtBHqE
-=SY78
+iQEcBAEBCgAGBQJROuTdAAoJEPUd7O0j6ekAG2gH/3q1ObVOx5tzexhiZDswDi26
+qBV/fpGx7u/GdgzGt67iCazXvu31ZoTtsuYbO4KDuXDGG2IwTEUGLggxvtVK23qG
+uQqdds0ddRQX2n3BgUd6sxZFbZjwiYHAIi7/OosWImMjdVqd5mPch1RwE2Fa0YX/
+PjaBVORKFrp0zfJnhliQk7vwjFNRsDxT/VQ974DBTHe472Zl+kCJGjpWZq0LSBaO
+a/fB4s5ETD+S0YfdXMrnXLbrVTWRQVPYvUgZIa1mitrvrDVALw3AGefhzZRXOBX7
+wfCl8r6286wxtup7uF8v8Grh642fYwHf3K4rQfvEt02Ec6Hm5n//Nv5HafJV1D8=
+=MDgC
 -----END PGP SIGNATURE-----
