@@ -1,6 +1,11 @@
 # ChangeLog for www-client/seamonkey-bin
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey-bin/ChangeLog,v 1.167 2013/02/24 11:32:47 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey-bin/ChangeLog,v 1.168 2013/03/09 07:30:06 jdhore Exp $
+
+*seamonkey-bin-2.16.1 (09 Mar 2013)
+
+  09 Mar 2013; Jeff Horelick <jdhore@gentoo.org> +seamonkey-bin-2.16.1.ebuild:
+  Version bump
 
   24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> seamonkey-bin-2.16.ebuild:
   Stable for x86, wrt bug #458390
